--- a/about.html
+++ b/about.html
@@ -8,9 +8,17 @@
     </head>
 
     <body>
+        <div class="toplinks">
+            <a href="homepage.html">home page</a>
+            about page <br>
+            (you are here)
+            <a href="portfolio.html">portfolio page</a>
+            <a href="contact.html">contact page</a>
+        </div>
+
         <h1> About Page </h1>
-          
-        <img src = "aboutpage.png" alt = "about page image">
+
+        <img src = "aboutpage.png" alt = "about page image" width="640rem" height="120rem">
         <h3> Interests </h3>
         <div> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
         <h3> Strengths </h3>
