--- a/homepage.html
+++ b/homepage.html
@@ -7,14 +7,23 @@
     </head>
 
     <body>
+        <div class="toplinks">
+            home page <br>
+            (you are here)
+            <a href="about.html">about page</a>
+            <a href="portfolio.html">portfolio page</a>
+            <a href="contact.html">contact page</a>
+        </div>
+
         <h1> Home Page </h1>
           
-        <img src = "homeimg.png" alt = "homepage image">
-        <h3> Mission statement </h3>
-        <div> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
-        <h3> quote </h3>
-        <div> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
+        <img src = "homeimg.png" alt = "homepage image" width = 226rem height = 302rem>
 
+        <h3> quote </h3>
+        <div class="quotegrid">
+            <div> "They couldn't hit an elephant at this distance."</div>
+            <div>-John Sedgwick, moments before his death, 1864 </div>
+        </div>
     </body>
 
 </html>
