--- a/portfolio.html
+++ b/portfolio.html
@@ -8,8 +8,16 @@
     </head>
 
     <body>
+        <div class="toplinks">
+            <a href="homepage.html">home page</a>
+            <a href="about.html">about page</a>
+            portfolio page <br>
+            (you are here)
+            <a href="contact.html">contact page</a>
+        </div>
+
         <h1> Portfolio Page </h1>
-          
+
         <img src = "portimg.png" alt = "portfolio image">
         <h3> Project 1 </h3>
         <div> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
